# dykes

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: basic.py  example_application.py  old_way.py
src/dykes/: __init__.py  internal.py  options.py  processing.py  utils.py
src/simple_parser/: __init__.py
tests/test_simple_parser/: test_build_parser.py  test_parse_args.py
tests/test_simple_parser/test_processing/: test_build_parser.py  test_get_fields.py  test_parse_args.py
tests/test_simple_parser/test_utils/: test_get_origin.py
