[project]
name = "simple-parser"
version = "0.1.0"
description = "A tiny declarative Argparse wrapper."
authors = [
    {name = "Piper Thunstrom",email = "pathunstrom@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
poetry = "^2.1.3"
pytest = "^8.4.0"
sphinx = "^8.2.3"
ruff = "^0.11.12"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
