[project]
name = "dykes"
dynamic = ["version"]
description = "A tiny declarative Argparse wrapper."
authors = [
    {name = "Piper Thunstrom",email = "pathunstrom@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]

[tool.poetry]
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
sphinx = "^8.2.3"
ruff = "^0.11.12"
mypy = "^1.16.0"
pre-commit = "^4.2.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
